--- a/app/src/_doby/res/values-in-rID/strings.xml
+++ b/app/src/_doby/res/values-in-rID/strings.xml
@@ -3,7 +3,14 @@
 <resources>
   <string name="Slogan">Smart Home, for better life</string>
   <string name="Tap1_Shared_Description">Saya buat sesuatu yang keren dengan 720°Panoramic Cam, datang &amp; melihatnya!</string>
-  <string name="Treaty_url">http://www.jfgou.com/app/treaty%s_en.html</string>
-  <string name="app_name">Doby</string>
+  <!--
+ 【链接】IGeneralRules
+  http://www.jfgou.com/app/DobyNew/treaty_DobyNew_en.html
+  毛峰  16:27:18
+ 【链接】二、服务使用
+  http://www.jfgou.com/app/DobyNew/treaty_DobyNew_cn.html
+   -->
+  <string name="Treaty_url">http://www.jfgou.com/app/DobyNew/treaty%s_en.html</string>
+  <string name="app_name">DobyNew</string>
   <string name="help_url">https://%1$s:8081/helps/en%2$s.html</string>
 </resources>
