--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -937,7 +937,7 @@
   <string name="Tips_Device_TimeoutRetry">Timeout, tente novamente</string>
   <string name="Tips_ShortVideo">Pressão longa para gravar um pequeno vídeo</string>
   <string name="Tips_SureDelete">Claro que para apagar?</string>
-  <string name="Treaty_url">http://www.jfgou.com/app/treaty%s_en.html</string>
+  <string name="Treaty_url">http://www.jfgou.com/app/DobyNew/treaty%s_en.html</string>
   <string name="UPDATE_DISCONNECT">O dispositivo não responde. Por favor tente novamente</string>
   <string name="UPDATE_FAIL">Conexão com dispositivo falhou. Por favor tente novamente</string>
   <string name="UPDATING_BUTTON">Atualizando</string>
