--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -937,7 +937,7 @@
   <string name="Tips_Device_TimeoutRetry">连接超时，请重试</string>
   <string name="Tips_ShortVideo">长按录制短视频</string>
   <string name="Tips_SureDelete">是否删除？</string>
-  <string name="Treaty_url">http://www.jfgou.com/app/treaty%s_cn.html</string>
+  <string name="Treaty_url">http://www.jfgou.com/app/DobyNew/treaty%s_cn.html</string>
   <string name="UPDATE_DISCONNECT">设备无响应，请重试</string>
   <string name="UPDATE_FAIL">设备连接失败，请重试</string>
   <string name="UPDATING_BUTTON">正在更新</string>
