--- a/app/src/_doby/res/values-pt/strings.xml
+++ b/app/src/_doby/res/values-pt/strings.xml
@@ -3,7 +3,7 @@
 <resources>
   <string name="Slogan">Smart Home, for better life</string>
   <string name="Tap1_Shared_Description">Eu fiz algo legal por 720°panorâmico Cam, venha ver!</string>
-  <string name="Treaty_url">http://www.jfgou.com/app/treaty%s_en.html</string>
+  <string name="Treaty_url">http://www.jfgou.com/app/DobyNew/treaty%s_en.html</string>
   <string name="app_name">Doby</string>
   <string name="help_url">https://%1$s:8081/helps/en%2$s.html</string>
 </resources>
