--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -937,7 +937,7 @@
   <string name="Tips_Device_TimeoutRetry">De tiempo de espera, intente de nuevo</string>
   <string name="Tips_ShortVideo">Pulsado para grabar un vídeo de corta duración</string>
   <string name="Tips_SureDelete">Asegúrese de eliminar?</string>
-  <string name="Treaty_url">http://www.jfgou.com/app/treaty%s_en.html</string>
+  <string name="Treaty_url">http://www.jfgou.com/app/DobyNew/treaty%s_en.html</string>
   <string name="UPDATE_DISCONNECT">Ausrüstung keine Antwort, versuchen Sie es erneut</string>
   <string name="UPDATE_FAIL">Conexión del dispositivo fallido, por favor, inténtalo de nuevo</string>
   <string name="UPDATING_BUTTON">Renovando</string>
