新显示名称 DobyNew

--- a/app/src/_doby/res/values-fr/strings.xml
+++ b/app/src/_doby/res/values-fr/strings.xml
@@ -4,6 +4,6 @@
   <string name="Slogan">Smart Home, for better life</string>
   <string name="Tap1_Shared_Description">Je fis quelque chose par cool de 720°panoramique Cam, venez et voir!</string>
   <string name="Treaty_url">http://www.jfgou.com/app/DobyNew/treaty%s_en.html</string>
-  <string name="app_name">Doby</string>
+  <string name="app_name">DobyNew</string>
   <string name="help_url">https://%1$s:8081/helps/en%2$s.html</string>
 </resources>
